--- a/Customer_Management.html
+++ b/Customer_Management.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <style>
     .jumbotron {
-    padding: 30px;
-    background-image: linear-gradient(45deg,rgb(22, 62, 136),rgb(0, 170, 248));
+     background-image:linear-gradient(to right,#4f4e92, #4493fad8);
+      padding: 20px;
+      color:white;
   }
   .button_size{
     box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.397);
@@ -24,7 +25,7 @@
     
 }
 .background_color{
-        background-image: linear-gradient(45deg,rgb(3, 74, 121),rgb(0, 170, 248));
+        background-image: linear-gradient(to right,#4f4e92, #4493fad8);
         
 }
 </style>
